--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,60 @@
 ---
 ---
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article {Monotonicty,
+    AUTHOR = {Gonz\'alez-Sanz, Alberto and Nutz, Marcel and Riveros
+              Valdevenito, Andr\'es},
+     TITLE = {Monotonicity in quadratically regularized linear programs},
+   JOURNAL = {SIAM J. Optim.},
+  FJOURNAL = {SIAM Journal on Optimization},
+    VOLUME = {35},
+      YEAR = {2025},
+    NUMBER = {2},
+     PAGES = {1419--1437},
+      _ISSN = {1052-6234,1095-7189},
+   _MRCLASS = {90C05 (49N05 49N10 49Q22)},
+  _MRNUMBER = {4922802},
+       _DOI = {10.1137/24M1685171},
+       _URL = {https://doi.org/10.1137/24M1685171}, 
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article {Guyon-lekeufack,
+    AUTHOR = {Nutz, Marcel and Riveros Valdevenito, Andr\'es},
+     TITLE = {On the {G}uyon-{L}ekeufack volatility model},
+   JOURNAL = {Finance Stoch.},
+  FJOURNAL = {Finance and Stochastics},
+    VOLUME = {28},
+      YEAR = {2024},
+    NUMBER = {4},
+     PAGES = {1203--1223},
+      _ISSN = {0949-2984,1432-1122},
+   _MRCLASS = {91B70 (60H10 91G20)},
+  _MRNUMBER = {4798701},
+_MRREVIEWER = {Jiangyan\ Peng},
+       _DOI = {10.1007/s00780-024-00544-2},
+       _URL = {https://doi.org/10.1007/s00780-024-00544-2},
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article {Masters.Thesis,
+    AUTHOR = {Riveros Valdevenito, Andr\'es},
+     TITLE = {Propiedad de martingala, volatilidad estoc\'astica y burbujas financieras},
+   JOURNAL = {Master's Thesis, under Professor Jaime San Mart\'in}
+      YEAR = {2020},
+       _URL = {https://repositorio.uchile.cl/handle/2250/175773}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@article{Gradient.Descent.I,
+  author = {Gonz\'alez-Sanz, Alberto and Nutz, Marcel and Riveros
+              Valdevenito, Andr\'es},
+  title = {Linear Convergence of Gradient Descent
+  for Quadratically Regularized Optimal Transport},
+  year = {2025+},
+  JOURNAL = {Preprint},
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{Jump.Times,
+author = {Protter, Philip and Riveros Valdevenito, Andr\'es},
+title = {{M}arkov process jump times and their {C}ox construction},
+year = {2024},
+journal = {Ann Oper Res},
+FJournal = {Annals of Operations Research},
 }
