--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -37,7 +37,7 @@ _MRREVIEWER = {Jiangyan\ Peng},
 @article {Masters.Thesis,
     AUTHOR = {Riveros Valdevenito, Andr\'es},
      TITLE = {Propiedad de martingala, volatilidad estoc\'astica y burbujas financieras},
-   JOURNAL = {Master's Thesis, under Professor Jaime San Mart\'in}
+   JOURNAL = {Master's Thesis, under Professor Jaime San Mart\'in},
       YEAR = {2020},
        _URL = {https://repositorio.uchile.cl/handle/2250/175773}
 }
