--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -39,7 +39,7 @@ _MRREVIEWER = {Jiangyan\ Peng},
      TITLE = {Propiedad de martingala, volatilidad estoc\'astica y burbujas financieras},
    JOURNAL = {Master's Thesis, under Professor Jaime San Mart\'in},
       YEAR = {2020},
-       _URL = {https://repositorio.uchile.cl/handle/2250/175773}
+       _URL = {https://repositorio.uchile.cl/handle/2250/175773},
 }
 
 @article{Gradient.Descent.I,
