--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,54 +1,40 @@
 ---
 ---
 @article {Monotonicty,
-    AUTHOR = {Gonz\'alez-Sanz, Alberto and Nutz, Marcel and Riveros
+    author = {Gonz\'alez-Sanz, Alberto and Nutz, Marcel and Riveros
               Valdevenito, Andr\'es},
-     TITLE = {Monotonicity in quadratically regularized linear programs},
-   JOURNAL = {SIAM J. Optim.},
-  FJOURNAL = {SIAM Journal on Optimization},
-    VOLUME = {35},
-      YEAR = {2025},
-    NUMBER = {2},
-     PAGES = {1419--1437},
-      _ISSN = {1052-6234,1095-7189},
-   _MRCLASS = {90C05 (49N05 49N10 49Q22)},
-  _MRNUMBER = {4922802},
-       _DOI = {10.1137/24M1685171},
-       _URL = {https://doi.org/10.1137/24M1685171}, 
+     title = {Monotonicity in quadratically regularized linear programs},
+   journal = {SIAM J. Optim.},
+  fjournal = {SIAM Journal on Optimization},
+    volume = {35},
+      year = {2025},
+    number = {2},
+     pages = {1419--1437},
 }
 
 @article {Guyon-lekeufack,
-    AUTHOR = {Nutz, Marcel and Riveros Valdevenito, Andr\'es},
-     TITLE = {On the {G}uyon-{L}ekeufack volatility model},
-   JOURNAL = {Finance Stoch.},
-  FJOURNAL = {Finance and Stochastics},
-    VOLUME = {28},
-      YEAR = {2024},
-    NUMBER = {4},
-     PAGES = {1203--1223},
-      _ISSN = {0949-2984,1432-1122},
-   _MRCLASS = {91B70 (60H10 91G20)},
-  _MRNUMBER = {4798701},
-_MRREVIEWER = {Jiangyan\ Peng},
-       _DOI = {10.1007/s00780-024-00544-2},
-       _URL = {https://doi.org/10.1007/s00780-024-00544-2},
+    author = {Nutz, Marcel and Riveros Valdevenito, Andr\'es},
+     title = {On the {G}uyon-{L}ekeufack volatility model},
+   journal = {Finance Stoch.},
+  fjournal = {Finance and Stochastics},
+    volume = {28},
+      year = {2024},
+    number = {4},
+     pages = {1203--1223},
 }
 
 @article {Masters.Thesis,
-    AUTHOR = {Riveros Valdevenito, Andr\'es},
-     TITLE = {Propiedad de martingala, volatilidad estoc\'astica y burbujas financieras},
-   JOURNAL = {Master's Thesis, under Professor Jaime San Mart\'in},
-      YEAR = {2020},
-       _URL = {https://repositorio.uchile.cl/handle/2250/175773},
+    author = {Riveros Valdevenito, Andr\'es},
+     title = {Propiedad de martingala, volatilidad estoc\'astica y burbujas financieras},
+   journal = {Master's Thesis, under Professor Jaime San Mart\'in},
+      year = {2020},
 }
 
 @article{Gradient.Descent.I,
-  author = {Gonz\'alez-Sanz, Alberto and Nutz, Marcel and Riveros
-              Valdevenito, Andr\'es},
-  title = {Linear Convergence of Gradient Descent
-  for Quadratically Regularized Optimal Transport},
+  author = {Gonz\'alez-Sanz, Alberto and Nutz, Marcel and Riveros Valdevenito, Andr\'es},
+  title = {Linear Convergence of Gradient Descent for Quadratically Regularized Optimal Transport},
   year = {2025+},
-  JOURNAL = {Preprint},
+  journal = {Preprint},
 }
 
 @article{Jump.Times,
@@ -56,5 +42,5 @@ author = {Protter, Philip and Riveros Valdevenito, Andr\'es},
 title = {{M}arkov process jump times and their {C}ox construction},
 year = {2024},
 journal = {Ann Oper Res},
-FJournal = {Annals of Operations Research},
+fjournal = {Annals of Operations Research},
 }
