--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,7 @@
 ---
 ---
+@string{aps = {American Physical Society,}}
+
 @article {Monotonicty,
     author = {Gonz\'alez-Sanz, Alberto and Nutz, Marcel and Riveros
               Valdevenito, Andr\'es},
