--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -113,3 +113,16 @@
   preview={wave-mechanics.gif},
   abbr={Vision}
 }
+
+@article {Monotonicty,
+    author = {Gonz\'alez-Sanz, Alberto and Nutz, Marcel and Riveros
+              Valdevenito, Andr\'es},
+     title = {Monotonicity in quadratically regularized linear programs},
+   journal = {SIAM J. Optim.},
+  fjournal = {SIAM Journal on Optimization},
+    volume = {35},
+      year = {2025},
+    number = {2},
+     pages = {1419--1437},
+}
+
