--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -126,3 +126,14 @@
      pages = {1419--1437},
 }
 
+@article {Guyon-lekeufack,
+    author = {Nutz, Marcel and Riveros Valdevenito, Andr\'es},
+     title = {On the {G}uyon-{L}ekeufack volatility model},
+   journal = {Finance Stoch.},
+  fjournal = {Finance and Stochastics},
+    volume = {28},
+      year = {2024},
+    number = {4},
+     pages = {1203--1223},
+}
+
