--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -137,3 +137,11 @@
      pages = {1203--1223},
 }
 
+@article{Gradient.Descent.I,
+  author = {Gonz\'alez-Sanz, Alberto and Nutz, Marcel and Riveros Valdevenito, Andr\'es},
+  title = {Linear Convergence of Gradient Descent for Quadratically Regularized Optimal Transport},
+  year = {2025},
+  journal = {Preprint},
+}
+
+
