--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@
   author = {Gonz\'alez-Sanz, Alberto and Nutz, Marcel and Riveros Valdevenito, Andr\'es},
   title = {Linear Convergence of Gradient Descent for Quadratically Regularized Optimal Transport},
   year = {2025},
-  journal = {Preprint},
+  journal = {Preprint (submitted)},
 }
 
 @article {Monotonicty,
@@ -20,6 +20,14 @@
      pages = {1419--1437},
 }
 
+@article{Jump.Times,
+author = {Protter, Philip and Riveros Valdevenito, Andr\'es},
+title = {{M}arkov process jump times and their {C}ox construction},
+year = {2024},
+journal = {Ann Oper Res},
+fjournal = {Annals of Operations Research},
+}
+
 @article {Guyon-lekeufack,
     author = {Nutz, Marcel and Riveros Valdevenito, Andr\'es},
      title = {On the {G}uyon-{L}ekeufack Volatility Model},
@@ -29,4 +37,11 @@
       year = {2024},
     number = {4},
      pages = {1203--1223},
+}
+
+@article {Masters.Thesis,
+    author = {Riveros Valdevenito, Andr\'es},
+     title = {Propiedad de martingala, volatilidad estoc\'astica y burbujas financieras},
+   journal = {Master's Thesis, under Professor Jaime San Mart\'in},
+      year = {2020},
 }
