--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,7 +24,7 @@
 author = {Protter, Philip and Riveros Valdevenito, Andr\'es},
 title = {{M}arkov process jump times and their {C}ox construction},
 year = {2024},
-journal = {Ann Oper Res},
+journal = {Ann. Oper. Res.},
 fjournal = {Annals of Operations Research},
 }
 
@@ -41,7 +41,7 @@ fjournal = {Annals of Operations Research},
 
 @article {Masters.Thesis,
     author = {Riveros Valdevenito, Andr\'es},
-     title = {Propiedad de martingala, volatilidad estoc\'astica y burbujas financieras},
+     title = {Propiedad de Martingala, Volatilidad Estoc\'astica y Burbujas Financieras},
    journal = {Master's Thesis, under Professor Jaime San Mart\'in},
       year = {2020},
 }
