--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,7 +22,7 @@
 
 @article{Jump.Times,
 author = {Protter, Philip and Riveros Valdevenito, Andr\'es},
-title = {{M}arkov process jump times and their {C}ox construction},
+title = {{M}arkov Process Jump Times and their {C}ox Construction},
 year = {2024},
 journal = {Ann. Oper. Res.},
 fjournal = {Annals of Operations Research},
