--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,6 +6,8 @@
   title = {Linear Convergence of Gradient Descent for Quadratically Regularized Optimal Transport},
   year = {2025},
   journal = {Preprint (submitted)},
+  arxiv = {2509.08547},
+  pdf = {Gradient.Descent.I.pdf},
 }
 
 @article {Monotonicty,
@@ -18,6 +20,8 @@
       year = {2025},
     number = {2},
      pages = {1419--1437},
+  arxiv = {2408.07871},
+  pdf = {Monotonicity_paper.pdf},
 }
 
 @article{Jump.Times,
@@ -26,6 +30,8 @@ title = {{M}arkov Process Jump Times and their {C}ox Construction},
 year = {2024},
 journal = {Ann. Oper. Res.},
 fjournal = {Annals of Operations Research},
+  arxiv = {2310.07003},
+  pdf = {Jump_times_paper.pdf},
 }
 
 @article {Guyon-lekeufack,
@@ -37,6 +43,8 @@ fjournal = {Annals of Operations Research},
       year = {2024},
     number = {4},
      pages = {1203--1223},
+  arxiv = {2307.01319},
+  pdf = {OnGuyonLekeufack.pdf},
 }
 
 @article {Masters.Thesis,
