--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -52,4 +52,5 @@ fjournal = {Annals of Operations Research},
      title = {Propiedad de Martingala, Volatilidad Estoc\'astica y Burbujas Financieras},
    journal = {Master's Thesis, under Professor Jaime San Mart\'in},
       year = {2020},
+    pdf = {masters_thesis.pdf}
 }
