--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -52,5 +52,6 @@ fjournal = {Annals of Operations Research},
      title = {Propiedad de Martingala, Volatilidad Estoc\'astica y Burbujas Financieras},
    journal = {Master's Thesis, under Professor Jaime San Mart\'in},
       year = {2020},
-    pdf = {masters_thesis.pdf}
+    pdf = {masters_thesis.pdf},
+    website = {https://repositorio.uchile.cl/handle/2250/175773},
 }
